הסרת שיר בוט הישן באופן סופי

--- a/old.html
+++ b/old.html
@@ -1,189 +1,12 @@
 <!DOCTYPE html>
 <html lang="he">
 <head>
-  <meta charset="utf-8">
-  <meta name="author" content="NHLOCAL">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים">
-  <meta name="description" content="מאגר שירים חרדי: הורדת שירים חינם באופן פשוט וקליל">
-  <meta name="description" content="שיר-בוט: הפלטפורמה להורדת שירים חרדיים ברמה הגבוהה ביותר">
-  <meta name="description" content="מוזיקה חסידית בלחיצת כפתור: שיר-בוט מציע הורדת שירים לקהל החרדי">
-  <meta name="description" content="שירים חרדיים בהורדה מהירה: הפלטפורמה שמקנה גישה למגוון השירים הפופולריים">
-  <meta name="description" content="שיר-בוט: המערכת לחיפוש והורדת שירים חרדיים לנייד ולמחשב">
-  <meta name="description" content="הזמרים החרדיים הפופולריים במקום אחד: הורדת שירים בקלות ובמהירות">
-  <meta name="description" content="גלו את עולם השירים החרדיים: שיר-בוט מציע הורדה של מאגר עשרות אלפי שירים">
-  <meta name="description" content="חיפוש מותאם אישית: הורדת שירים חרדיים לפי אלבום, זמר ועוד">
-  <meta name="description" content="הגע לשירים שאתה מחפש: שיר-בוט מספק הורדה מהירה ונוחה של שירים חרדיים">
-  <meta name="description" content="שירים חרדיים באיכות מעולה: הורדה של שירים בכל הז'אנרים החרדיים הנפוצים">
-  <meta name="keywords" content="הורדת שירים, שירים חרדיים, מוזיקה חסידית, שיר-בוט, מאגר שירים, חיפוש שירים, זמרים חרדיים, שירים חסידיים, הורדה מהירה, מספר סידורי, אלבום, זמר, חרדים, יהדות, טקסטים, תורה, מוסיקליות, מועדים, אמנות">
-  <meta name="keywords" content="song downloads, Chassidic songs, Jewish music, Shir-Bot, song database, song search, Chassidic singers, Chassidic music, fast download, serial number, album, singer, Chassidic, Judaism, lyrics, Torah, musicality, holidays, art">
-  <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>שיר-בוט - ישן</title>
-  <link rel="canonical" href="https://nhlocal.github.io/shir-bot/old" />
-  <link rel="icon" type="image/x-icon" href="site/favicon.ico">
-  <link rel="stylesheet" href="site/styles.css">
-  <link rel="stylesheet" href="site/personal.css">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-TGD4VQW4X8');
-  </script>
-  <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "j4f7w6xhpe");
-  </script>
-  
-
 </head>
-<body dir="rtl" style="background-color:#FFFEDB;">
-  <div class="topnav">
-    <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב"><i class="fas fa-envelope"></i></a>
-    <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
-	
-	<center class="parent-element">
-	  <h3 id="nextObject">
-		<img width="85" src="site/logo.png" alt="סמל האתר">שיר-בוט
-	  </h3>
-	</center>
-	
-    <form id="searchForm" class="search-form">
-      <select id="searchBy" name="searchBy" class="search-select">
-        <option value="all">הכל</option>
-        <option value="serial">מס' סידורי</option>
-        <option value="name">שם השיר</option>
-        <option value="album">שם אלבום</option>
-        <option value="singer">שם הזמר</option>
-      </select>
-	  
-	<div class="input-container">
-	  <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
-	  <div id="textBubble" class="text-bubble">לחפש במאגר של 70,000 שירים</div>
-	</div>
 
-      <button type="submit" class="search-button">חפש</button>
-      <div class="filter-container">
-        <button id="singleFilter" class="filter-button-light">הצג סינגלים בלבד</button>
-      </div>
-    </form>
-  </div>
+<script>
+    window.onload = function () {
+        window.location.href = "https://nhlocal.github.io/shir-bot/";
+    }
+</script>
 
-
-	<div id="loadingMessage" class="loading-message">
-	  <img src="site/loading.gif" alt="טעינה" />
-	  <span>מוריד...</span>
-	</div>
-	<div id="modalOverlay" class="modal-overlay">
-	  <div class="modal-content">
-		<span id="modalMessage"></span><br>
-		<button id="modalOkButton" style="font-family: tahoma">אישור</button>
-	  </div>
-	</div>
-
-
-	<div id="modalOverlay" class="modal-overlay">
-	  <div class="modal-content">
-		<span id="modalMessage"></span><br>
-		<button id="modalOkButton" style="font-family: tahoma">אישור</button>
-	  </div>
-	</div>
-
-  <div id="resultsTable">
-	<table>
-	  <thead>
-		<tr>
-		  <th>מספר סידורי</th>
-		  <th>שם השיר</th>
-		  <th>שם האלבום</th>
-		  <th>שם הזמר</th>	  
-		</tr>
-	  </thead>
-	  
-	<tbody>
-	  <tr>
-		<td colspan="4">
-		  <center id="instructions">
-			<div class="instructions-container">
-			  <h3>הוראות שימוש</h3>
-			  <p><b>♪</b> חפש שיר באופן חופשי</p>
-			  <p><b>♪</b> לחץ על המספר הסידורי של השיר</p>
-			  <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
-			  <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
-			  <p class="disclaimer">שים לב שבמערכת זו ניתן להוריד סינגלים בלבד!</p>
-			  
-			  <button class="helpButton" id="helpButton">לחץ כאן לקבלת עזרה מפורטת</button>
-			</div>
-		  </center>
-		</td>
-	  </tr>
-	</tbody>
-
-    </table>
-  </div>
-<!-- בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם -->
-	<div class="fixed-bottom">
-		<p>זוהי המערכת הישנה - השירים ישלחו לכתובת המייל שלכם</p>
-	  </div>
-	</div>
-
-    <!-- Help Section Overlay -->
-    <div class="help-overlay">
-        <div class="help-modal-container">
-            <!-- Close button -->
-            <span class="close-button" onclick="closeHelp()">X</span>
-
-            <!-- Step 1 -->
-            <div class="help-modal">
-                <h2>שלב א' - חיפוש</h2>
-                <p>חפש שם שיר, זמר או אלבום כרצונך. ניתן לחפש באופן חופשי בכל צורה שתרצו, גם לפי שם השיר, שם האלבום או שם הזמר בלבד</p>
-                <img src="help/1.png" alt="תמונה בינונית">
-                <div class="prev-step" onclick="showStep(1)">◄</div>
-                <div class="next-step" onclick="showStep(-1)">►</div>
-            </div>
-
-            <!-- Step 2 -->
-            <div class="help-modal" style="display: none;">
-                <h2>שלב ב' - מציאת שיר</h2>
-                <p>עבור על רשימת השירים שנמצאו ומצא את השיר הרצוי לך</p>
-				<img src="help/3.png" alt="תמונה בינונית">
-                <div class="prev-step" onclick="showStep(1)">◄</div>
-                <div class="next-step" onclick="showStep(-1)">►</div>
-            </div>
-
-            <!-- Step 3 -->
-            <div class="help-modal" style="display: none;">
-                <h2>שלב ג' - בחירת מספר</h2>
-                <p>לחץ על <b>המספר</b> של השיר שבחרת, שים לב שמדובר בסינגל ולא בשיר מאלבום. תוכל לבדוק האם שם האלבום הוא "סינגלים"</p>
-                <img src="help/2.png" alt="תמונה בינונית">
-                <div class="prev-step" onclick="showStep(1)">◄</div>
-                <div class="next-step" onclick="showStep(-1)">►</div>
-            </div>
-
-            <!-- Step 4 -->
-            <div class="help-modal" style="display: none;">
-                <h2>שלב ד' - שליחת מייל</h2>
-                <p>יפתח לך חלון חדש עם הודעת מייל. פשוט לחץ על שליחה</p>
-                <img src="help/4.png" alt="תמונה קטנה">
-                <div class="prev-step" onclick="showStep(1)">◄</div>
-                <div class="next-step" onclick="showStep(-1)">►</div>
-            </div>
-
-            <!-- Step 5 -->
-            <div class="help-modal" style="display: none;">
-                <h2>שלב ה' - קבלת השיר</h2>
-                <p>כעת לא נותר לך אלא להמתין ותוך כדקה ישלח למייל שלך השיר שביקשת</p>
-				<img src="help/5.png" alt="תמונה בינונית">
-                <div class="prev-step" onclick="showStep(1)">◄</div>
-                <div class="next-step" onclick="showStep(-1)">►</div>
-            </div>
-        </div>
-    </div>
-  <script src="site/messages.js"></script>
-  <script src="site/script-old.js"></script>
-</body>
 </html>
